added a new code snippet

--- a/doqmeat/notebook/F2U/templates.html
+++ b/doqmeat/notebook/F2U/templates.html
@@ -17,12 +17,12 @@
 
 <body>
 
-	<div id="wrapper">
-		<p class="hide"><small><a href="/" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; F2U &gt;</small>
-			<center>
-				<h1>templates / codes</h1>
-			</center>
-		<p>F2U layouts and templates coded by me for you to use on your website! <a title="i host the zip folders with the files here!" href="https://vgen.co/doqmeat/shop" target="_blank">VGen shop</a> for easy downloads!
+	<main>
+		<p class="hide"><small><a href="/" target="_parent">home</a> &gt; <a href="/notebook" target="_parent">notebook</a> &gt; F2U &gt;</small></p>
+		<center>
+			<h1>templates</h1>
+		</center>
+		<p>F2U layouts and templates coded by me for you to use on your website! <a title="i host the zip folders with the files here!" href="https://vgen.co/doqmeat/shop" target="_blank">VGen shop</a> for easy downloads!</p>
 
 		<h2>rules</h2>
 
@@ -44,7 +44,7 @@
 
 		<hr>
 
-	</div>
+	</main>
 </body>
 
 </html>
