--- a/doqmeat/notebook/index.html
+++ b/doqmeat/notebook/index.html
@@ -45,52 +45,54 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				<div class="left-in">
 
 					<p>lots and lots of links related to helping you out on your website making journey. i save them all here!</p>
-					<li><a href="resources/index.html#favs" target="iframe_a">personal favs</a></li>
 					<ul>
-						<li><a href="resources/index.html#resource-pages" target="iframe_a">other resource pages</a></li>
-					</ul>
-					<li><a href="resources/index.html#code" target="iframe_a">coding &amp; webdev</a></li>
-					<ul>
-						<li><a href="resources/index.html#editor" target="iframe_a">code editors</a></li>
-						<li><a href="resources/index.html#hosting" target="iframe_a">hosting</a></li>
-						<li><a href="resources/index.html#git" target="iframe_a">git / github</a></li>
-						<li><a href="resources/index.html#code-misc" target="iframe_a">misc</a></li>
-					</ul>
-					<li><a href="resources/index.html#coding-help" target="iframe_a">HTML, CSS, and JS</a></li>
-					<ul>
-						<li><a href="resources/index.html#beginner" target="iframe_a">the basics (HTML and CSS focused)</a></li>
-						<li><a href="resources/index.html#js" target="iframe_a">javascript</a></li>
-						<li><a href="resources/index.html#css" target="iframe_a">css</a></li>
-						<li><a href="resources/index.html#html" target="iframe_a">html</a></li>
+						<li><a href="resources/index.html#favs" target="iframe_a">personal favs</a></li>
 						<ul>
-							<li><a href="resources/index.html#layouts" target="iframe_a">html F2U templates</a></li>
+							<li><a href="resources/index.html#resource-pages" target="iframe_a">other resource pages</a></li>
 						</ul>
+						<li><a href="resources/index.html#code" target="iframe_a">coding &amp; webdev</a></li>
+						<ul>
+							<li><a href="resources/index.html#editor" target="iframe_a">code editors</a></li>
+							<li><a href="resources/index.html#hosting" target="iframe_a">hosting</a></li>
+							<li><a href="resources/index.html#git" target="iframe_a">git / github</a></li>
+							<li><a href="resources/index.html#code-misc" target="iframe_a">misc</a></li>
+						</ul>
+						<li><a href="resources/index.html#coding-help" target="iframe_a">HTML, CSS, and JS</a></li>
+						<ul>
+							<li><a href="resources/index.html#beginner" target="iframe_a">the basics (HTML and CSS focused)</a></li>
+							<li><a href="resources/index.html#js" target="iframe_a">javascript</a></li>
+							<li><a href="resources/index.html#css" target="iframe_a">css</a></li>
+							<li><a href="resources/index.html#html" target="iframe_a">html</a></li>
+							<ul>
+								<li><a href="resources/index.html#layouts" target="iframe_a">html F2U templates</a></li>
+							</ul>
+						</ul>
+						<li><a href="resources/index.html#sites" target="iframe_a">useful sites for webdev</a></li>
+						<li><a href="resources/index.html#tut" target="iframe_a">tutorials / guides</a></li>
+						<li><a href="resources/index.html#cool" target="iframe_a">cool stuff 4 your site</a></li>
+						<ul>
+							<li><a href="resources/index.html#guestbooks">guestbooks</a></li>
+							<li><a href="resources/index.html#tools" target="iframe_a">tools</a></li>
+							<li><a href="resources/index.html#calendar" target="iframe_a">calendars / clocks</a></li>
+							<li><a href="resources/index.html#music" target="iframe_a">music</a></li>
+							<li><a href="resources/index.html#rss" target="iframe_a">rss</a></li>
+							<li><a href="resources/index.html#help-misc" target="iframe_a">misc</a></li>
+						</ul>
+						<li><a href="resources/index.html#neat" target="iframe_a">neat pieces of code</a></li>
+						<li><a href="resources/index.html#img" target="iframe_a">graphics</a></li>
+						<ul>
+							<li><a href="resources/index.html#img-F2U" target="iframe_a">sites w/ F2U materials</a></li>
+							<li><a href="resources/index.html#bgs" target="iframe_a">backgrounds</a></li>
+							<li><a href="resources/index.html#archives" target="iframe_a">archives / collections</a></li>
+							<li><a href="resources/index.html#tumblr" target="iframe_a">tumblr blogs and masterposts</a></li>
+						</ul>
+						<li><a href="resources/index.html#font" target="iframe_a">fonts</a></li>
+						<ul>
+							<li><a href="resources/fonts.html" target="iframe_a">font page</a></li>
+						</ul>
+						<li><a href="resources/index.html#img-editing" target="iframe_a">image editing</a></li>
+						<li><a href="resources/index.html#misc" target="iframe_a">misc resources</a></li>
 					</ul>
-					<li><a href="resources/index.html#sites" target="iframe_a">useful sites for webdev</a></li>
-					<li><a href="resources/index.html#tut" target="iframe_a">tutorials / guides</a></li>
-					<li><a href="resources/index.html#cool" target="iframe_a">cool stuff 4 your site</a></li>
-					<ul>
-						<li><a href="resources/index.html#guestbooks">guestbooks</a></li>
-						<li><a href="resources/index.html#tools" target="iframe_a">tools</a></li>
-						<li><a href="resources/index.html#calendar" target="iframe_a">calendars / clocks</a></li>
-						<li><a href="resources/index.html#music" target="iframe_a">music</a></li>
-						<li><a href="resources/index.html#rss" target="iframe_a">rss</a></li>
-						<li><a href="resources/index.html#help-misc" target="iframe_a">misc</a></li>
-					</ul>
-					<li><a href="resources/index.html#neat" target="iframe_a">neat pieces of code</a></li>
-					<li><a href="resources/index.html#img" target="iframe_a">graphics</a></li>
-					<ul>
-						<li><a href="resources/index.html#img-F2U" target="iframe_a">sites w/ F2U materials</a></li>
-						<li><a href="resources/index.html#bgs" target="iframe_a">backgrounds</a></li>
-						<li><a href="resources/index.html#archives" target="iframe_a">archives / collections</a></li>
-						<li><a href="resources/index.html#tumblr" target="iframe_a">tumblr blogs and masterposts</a></li>
-					</ul>
-					<li><a href="resources/index.html#font" target="iframe_a">fonts</a></li>
-					<ul>
-						<li><a href="resources/fonts.html" target="iframe_a">font page</a></li>
-					</ul>
-					<li><a href="resources/index.html#img-editing" target="iframe_a">image editing</a></li>
-					<li><a href="resources/index.html#misc" target="iframe_a">misc resources</a></li>
 					<!-- paper-left end div -->
 				</div>
 			</div>
@@ -107,29 +109,31 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			<div class="site-p paper left">
 				<div class="left-in">
 					<p>graphics i've collected and saved</p>
-					<li><a href="resources/graphics.html#emo" target="iframe_b">emoticons</a></li>
-					<li><a href="resources/graphics.html#pix" target="iframe_b">pixels</a></li>
 					<ul>
-						<li><a href="resources/graphics.html#tiny" target="iframe_b">tiny</a></li>
-						<li><a href="resources/graphics.html#fav" target="iframe_b">favicons</a></li>
-						<li><a href="resources/graphics.html#big" target="iframe_b">big</a></li>
+						<li><a href="resources/graphics.html#emo" target="iframe_b">emoticons</a></li>
+						<li><a href="resources/graphics.html#pix" target="iframe_b">pixels</a></li>
+						<ul>
+							<li><a href="resources/graphics.html#tiny" target="iframe_b">tiny</a></li>
+							<li><a href="resources/graphics.html#fav" target="iframe_b">favicons</a></li>
+							<li><a href="resources/graphics.html#big" target="iframe_b">big</a></li>
+						</ul>
+						<li><a href="resources/graphics.html#div" target="iframe_b">dividers</a></li>
+						<li><a href="resources/graphics.html#stickers" target="iframe_b">stickers</a></li>
+						<ul>
+							<li><a href="resources/graphics.html#cats" target="iframe_b">cats</a></li>
+							<li><a href="resources/graphics.html#music" target="iframe_b">music</a></li>
+							<li><a href="resources/graphics.html#heart" target="iframe_b">hearts</a></li>
+							<li><a href="resources/graphics.html#stationary" target="iframe_b">stationary</a></li>
+							<li><a href="resources/graphics.html#nat" target="iframe_b">nature</a></li>
+							<li><a href="resources/graphics.html#text" target="iframe_b">with text</a></li>
+							<li><a href="resources/graphics.html#other-stickers" target="iframe_b">other</a></li>
+							<li><a href="resources/graphics.html#hw" target="iframe_b">halloween</a></li>
+							<li><a href="resources/graphics.html#long" target="iframe_b">long</a></li>
+							<li><a href="resources/graphics.html#vgs" target="iframe_b">video games</a></li>
+						</ul>
+						<li><a href="resources/graphics.html#gif" target="iframe_b">gifs</a></li>
+						<li><a href="resources/graphics.html#frames" target="iframe_b">frames</a></li>
 					</ul>
-					<li><a href="resources/graphics.html#div" target="iframe_b">dividers</a></li>
-					<li><a href="resources/graphics.html#stickers" target="iframe_b">stickers</a></li>
-					<ul>
-						<li><a href="resources/graphics.html#cats" target="iframe_b">cats</a></li>
-						<li><a href="resources/graphics.html#music" target="iframe_b">music</a></li>
-						<li><a href="resources/graphics.html#heart" target="iframe_b">hearts</a></li>
-						<li><a href="resources/graphics.html#stationary" target="iframe_b">stationary</a></li>
-						<li><a href="resources/graphics.html#nat" target="iframe_b">nature</a></li>
-						<li><a href="resources/graphics.html#text" target="iframe_b">with text</a></li>
-						<li><a href="resources/graphics.html#other-stickers" target="iframe_b">other</a></li>
-						<li><a href="resources/graphics.html#hw" target="iframe_b">halloween</a></li>
-						<li><a href="resources/graphics.html#long" target="iframe_b">long</a></li>
-						<li><a href="resources/graphics.html#vgs" target="iframe_b">video games</a></li>
-					</ul>
-					<li><a href="resources/graphics.html#gif" target="iframe_b">gifs</a></li>
-					<li><a href="resources/graphics.html#frames" target="iframe_b">frames</a></li>
 
 					<!-- 		paper left end div -->
 				</div>
@@ -147,10 +151,15 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				<div class="left-in">
 					<p>free to use templates and code snippets.</p>
 					<p>credit is not necessary but a link back is appreciated!</p>
+					<h3>templates</h3>
 					<ul>
-						<li><a href="F2U/codes.html#walkman" target="iframe_c">JS sony walkman mp3 player</a> <img src="/!g/pix/new1.gif"></li>
-						<li><a href="F2U/codes.html#yukika" target="iframe_c">yukika passport</a></li>
-						<li><a href="F2U/codes.html#notebook" target="iframe_c">notebook</a></li>
+						<li><a href="F2U/templates.html#walkman" target="iframe_c">JS sony walkman mp3 player</a> <img src="/!g/pix/new1.gif"></li>
+						<li><a href="F2U/templates.html#yukika" target="iframe_c">yukika passport</a></li>
+						<li><a href="F2U/templates.html#notebook" target="iframe_c">notebook</a></li>
+					</ul>
+					<h3>code snippets</h3>
+					<ul>
+						<li><a href="F2U/snippets.html#rainbow-on-hover" target="iframe_c">rainbow on hover</a></li>
 					</ul>
 
 					<!-- 		paper left end div -->
@@ -158,7 +167,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			</div>
 
 			<div class="archive-p paper right">
-				<iframe src="F2U/codes.html" name="iframe_c" height="600px" width="489px" style="border:none"></iframe>
+				<iframe src="F2U/templates.html" name="iframe_c" height="600px" width="489px" style="border:none"></iframe>
 
 				<!-- 	paper right end div -->
 			</div>
@@ -171,15 +180,17 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				<div class="left-in">
 					<p>credit is not necessary but a link back is appreciated!</p>
 					<p>note: please <mark>do not <a class="outlink" href="https://www.hostinger.com/tutorials/hotlinking" target="_blank">hotlink</a>!</mark> download them and save them to your own server. i change things around frequently too so it might break lol.</p>
-					<li><a href="F2U/materials.html" target="iframe_d">site materials</a></li>
 					<ul>
-						<li><a href="F2U/materials.html#bgs" target="iframe_d">backgrounds</a></li>
-						<li><a href="F2U/materials.html#pix" target="iframe_d">pixels</a></li>
-						<li><a href="F2U/materials.html#cur" target="iframe_d">cursors</a></li>
-					</ul>
-					<li><a href="F2U/scans.html" target="iframe_d">scans</a></li>
+						<li><a href="F2U/materials.html" target="iframe_d">site materials</a></li>
+						<ul>
+							<li><a href="F2U/materials.html#bgs" target="iframe_d">backgrounds</a></li>
+							<li><a href="F2U/materials.html#pix" target="iframe_d">pixels</a></li>
+							<li><a href="F2U/materials.html#cur" target="iframe_d">cursors</a></li>
+						</ul>
+						<li><a href="F2U/scans.html" target="iframe_d">scans</a></li>
 
-					<li><a href="F2U/stamps.html" target="iframe_d">stamps</a></li>
+						<li><a href="F2U/stamps.html" target="iframe_d">stamps</a></li>
+					</ul>
 
 					<!-- 		paper left end div -->
 				</div>
@@ -250,9 +261,10 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			<div class="info-p paper left">
 				<div class="left-in">
 					<h1>des' resources</h1>
-					<p>in this notebook you'll find many helpful links that have helped me throughout my journey of making this site. there will be stuff related to webdev, indie web, and other tech stuff you might find useful! will also share interesting stuff i find on the web!</p>
-					<p>i will also be sharing my free to use stuff such as templates, site materials, and more! by other people and my own. take whatever you need from here!</p>
-					<p>last updated on: <b>10.jul.25</b></p>
+					<p>in this notebook you'll find many helpful links that have helped me throughout my journey of making this site. there will be stuff related to webdev, indie web, and other tech stuff you might find useful! i also save anything remotely useful.</p>
+					<p>there will also be interesting stuff i find on the web in the <b>bookmarks</b> tab</p>
+					<p>sometimes i make free to use (F2U) stuff such as templates, site materials, and more! take whatever you need from here.</p>
+					<p>last updated on: <b>25.dec.25</b></p>
 					<!-- 		paper left end div -->
 				</div>
 			</div>
