--- a/doqmeat/sitemap.html
+++ b/doqmeat/sitemap.html
@@ -94,7 +94,8 @@
 				<ul>
 					<li><a href="/notebook/F2U/stamps.html" target="_parent">stamps</a></li>
 					<li><a href="/notebook/F2U/materials.html" target="_parent">materials</a></li>
-					<li><a href="/notebook/F2U/codes.html" target="_parent">templates</a></li>
+					<li><a href="/notebook/F2U/templates.html" target="_parent">templates</a></li>
+					<li><a href="/notebook/F2U/snippets.html" target="_parent">code snippets</a></li>
 					<li><a href="/notebook/F2U/scans.html" target="_parent">scans</a></li>
 				</ul>
 				<li><b>tutorials / guides</b></li>
