added a link back home to fish love

--- a/doqmeat/fish-love/index.html
+++ b/doqmeat/fish-love/index.html
@@ -29,9 +29,10 @@ made by des with love for my gf, i love u helena
     <button onclick="closeModal('info')">x</button>
     <p><b>P.S. enable audio autoplay and reload the page!</b></p>
     <p>last updated: <b>11.dec.25</b></p>
-    <p><i>made for my girlfriend for our 4th anniversary, i talk about the making of this page on my <a href="/learning/javascript/thoughts.html#helena-4th-anni">learning in public</a></i></p>
+    <p><i>made for my girlfriend for our 4th anniversary, i talk about the making of this page on my <a href="/learning/javascript/thoughts.html#helena-4th-anni">learning in public</a> page.</i></p>
     <p><b>credits</b>: bg pic by <a href="https://www.pexels.com/photo/underwater-photography-of-ocean-2397651/" target="_blank">Jeremy Bishop</a>, kissing fish pic from <a href="https://www.hygger-online.com/fish-profile-why-do-kissing-fish-kiss/?srsltid=AfmBOorDHL_lfw1VoUlpmO3vEjZp0gkA_fDJjdzk0BT-pvjI4tK_xDfI" target="_blank">here</a>, draggable JS code from <a href="https://stackoverflow.com/questions/14695933/draggable-div-with-classname" target="_blank">stackoverflow</a></p>
     <p><b>audios used:</b> <a href="https://youtu.be/bINIsdojt6o?si=i73OFceXiUV73HiX" target="_blank" rel="noopener noreferrer">fish love</a>, <a href="https://youtu.be/gUS2WFpKAWs?si=YtGLaupc4yR1AXip" target="_blank" rel="noopener noreferrer">kiss</a>, <a href="https://youtu.be/barWV7RWkq0?si=4FfKvZCjxNcwscF7" target="_blank" rel="noopener noreferrer">clapping</a></p>
+    <p><a href="/">go back home?</a></p>
   </dialog>
   <script src="fish.js">
   </script>
