--- a/doqmeat/learning/javascript/thoughts.html
+++ b/doqmeat/learning/javascript/thoughts.html
@@ -52,6 +52,7 @@ function checkKiss() {
 </textarea>
 		<p>because of this, i needed the absolute value of a number in order to determine if the fish were kissing by calculating their difference between their <code>offsetTop</code> so i also found out about the function that gives you the absolute value of a number: <code>Math.abs(n)</code>. pretty cool!</p>
 		<p>for now have my ramblings, but at a later date i will upload this stuff here after i show my girlfriend :3</p>
+		<p><b>25.dec.25 UPDATE:</b> the page has been up for a while now but <a href="/fish-love/">fish love</a> is now live on my site.</p>
 		<p class="date">07.dec.25</p>
 		<hr>
 		<p>i never really talked about the <a href="https://doqmeat.github.io/js-walkman-mp3-player/" target="_blank" rel="noopener noreferrer">mp3 player</a> i made using a <a href="https://github.com/sayantanm19/js-music-player" target="_blank">JS template</a> so lets do that now!! making this little thing was so much fun. the template code was just for the music player with a tracking slider, and a volume one (wait i should implement the volume slider as buttons on the side... i'll add it to the to-do list) but that was pretty much it! i added the playlist and more properties to the song objects like the genre and year it was released. also added a few tiny stuff like some conditionals for the little bar at the bottom. overall really fun to work with!</p>
