fixed broken image

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -135,7 +135,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 			<aside id="sticker2" class="deco"><a title="by rice!" href="https://rice.place" target="_blank"><img src="!g/deco/BORNTOCODE.png" alt=""></a></aside>
 			<aside id="sticker6" class="deco"><a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank"><img title="from catstuff!" src="!f/v5/assets/meowunderstand.gif" alt="banner that reads 'which part of meow don't you understand?'"></a></aside>
 			<aside id="sticker8" class="deco"><a href="https://user.xmission.com/~emailbox/graphics.htm" target="_blank"><img title="from catstuff!" src="!f/v5/assets/benice.gif" alt="banner that reads 'please be nice to me, i love you'"></a></aside>
-			<aside id="sticker9" class="deco"><a title="my siinamota fansite :3" href="https://siinamota.doqmeat.com" target="_blank"><img src="https://siinamota.doqmeat.com/info/!g/buttons/button1%20(4).png" alt="siinamota fansite button"></a></aside>
+			<aside id="sticker9" class="deco"><a title="my siinamota fansite :3" href="https://siinamota.doqmeat.com" target="_blank"><img src="https://siinamota.doqmeat.com/_files/buttons/siinamotafansite100x50.png" alt="siinamota fansite button"></a></aside>
 			<!-- notepad wrapper -->
 			<section id="notepad">
 				<section id="stats" class="notepad-boxes">
@@ -165,7 +165,7 @@ you're free to take whatever you need from my site, but please refrain from taki
 						<span id="statuscafe-username"></span>
 						<span id="statuscafe-content"></span>
 					</p>
-					<p><span class="title">playing: </span> style savvy</p>
+					<p><span class="title">playing: </span> silksong, style savvy</p>
 					<p><span class="title">watching: </span> jojo (part 4), fionna and cake (season 2), fallout (season 2)</p>
 					<p><span class="title">reading: </span> n/a</p>
 					<p><span class="title">working on: </span> 2025 music recap, photobook index rework, new f2u template</p>
