updated december 2025 scrapbook page!

--- a/doqmeat/notebook/resources/bookmarks.html
+++ b/doqmeat/notebook/resources/bookmarks.html
@@ -60,6 +60,7 @@
 
 		<h3 id="music-links">music</h3>
 		<ul>
+			<li><a href="https://music.ishkur.com/">ishkur's guide to electronic music</a> - an interactive site with various examples of electronic subgenres</li>
 			<li><a href="https://poolsuite.net/" target="_blank">poolsuite</a></li>
 			<li><a href="https://ambient.garden/" target="_blank">ambient.garden</a></li>
 			<li><a href="http://www.rpgamers.net/radio/" target="_blank">RPGamers Radio</a> - radio for video game osts</li>
@@ -70,13 +71,14 @@
 			<li><a href="https://lucida.to/" target="_blank">lucida.to</a> - an easy way to download music</li>
 		</ul>
 
-		<h3 id="software">software / coding</h3>
+		<h3 id="software">software / frameworks</h3>
 		<ul>
 			<li><a href="https://wiki.lineageos.org/" target="_blank">lineageOS</a> - OS for various devices that you can "hack", i have it pending for my very old <a href="https://wiki.lineageos.org/devices/gtowifi/" target="_blank">samsung tablet</a></li>
 			<li><a href="https://overthewire.org/wargames/bandit/bandit1.html" target="_blank">overthewire</a> - puzzle you have to solve through your terminal</li>
 			<li><a href="https://meodai.github.io/pro-color-harmonies/" target="_blank">pro color harmonies</a></li>
 			<li><a href="https://typst.app/" target="_blank">typst</a></li>
 			<li><a href="https://svelte.dev/" target="_blank">svelte</a></li>
+			<li><a href="https://emberjs.com/" target="_blank">ember.js</a></li>
 		</ul>
 
 		<h3 id="games">games</h3>
