--- a/doqmeat/photobook/index.html
+++ b/doqmeat/photobook/index.html
@@ -23,19 +23,18 @@ coded with love by des
 
 	<header>
 		<h1>doqmeat's photobook</h1>
-		<p>my <b>instant film</b> pics are taken with a <button id="cam-button" title="click to show cam!" onclick="showFujifilm()">fujifilm instax mini 26</button>. i've had it since late 2017, works like a charm! both the camera and film it uses are pretty affordable. i love the pics you can get with it so i highly recommend it if you're looking for something to have some fun with!</p>
+		<p>my <b>instant film</b> pics are taken with a <button id="cam-button" title="click to show cam!" onclick="showFujifilm()">fujifilm instax mini 26</button>. i've had it since late 2017, works like a charm! both the camera and film it uses are pretty affordable. i love the pics you can get with it so i highly recommend it if you're looking for something to have some fun with! maybe i'll have a nice <b>digital camera</b> someday...</p>
 		<div id="cam-pics">
 			<img src="instant-cam%20(2).png">
 			<img src="instant-cam%20(1).png">
 		</div>
-		<p><b>digital</b> pics are from my shitty android phone *crying* wanna save for a nice digital camera someday! and i also take pics with my <b>3DS</b> cus it's fun :3</p>
 		<div id="p1"><img src="/!g/deco/instant-pic.gif"></div>
 
 		<div id="p3"><img src="/!g/deco/cam-instant.gif"></div>
 
 		<div id="p2"><img src="/!g/deco/cam_34.gif"></div>
 
-		<p><img src="/!g/pix/pics.gif" alt=""> <b>tags:</b>
+		<p><img src="/!g/pix/pics.gif" alt=""> <b>filter by:</b>
 			<button onclick="showPics('pic')">all</button>,
 			<button onclick="showPics('phone')">phone pics</button>,
 			<button onclick="showPics('instax')">instant film</button>,
@@ -54,6 +53,56 @@ coded with love by des
 					</div>
 				</div>
 -->
+		<div class="pic phone">
+			<img src="!g/260110-sunset.jpg" alt="sunset">
+			<div class="hov">
+				<p class="caption">a sunset on a random tuesday<br><b>taken on 06.jan.26</b></p>
+			</div>
+		</div>
+
+		<div class="pic phone">
+			<img src="!g/251230-az-trip (2).jpg" alt="silhouette">
+			<img src="!g/251230-az-trip (14).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (15).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (16).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (17).jpg" alt="pics from my AZ trip 2026">
+			<div class="hov">
+				<p class="caption">hopefully you can see that the silhouette of the canyon makes a cute seahorse. thank you tour guide. there's more pics of the canyon below. it was such a nice experience.<br><b>taken on december 2025</b></p>
+			</div>
+		</div>
+
+		<div class="pic phone">
+			<img src="!g/251230-az-trip (18).jpg" alt="pink and purple sunset with a mountain filled with snow in the background">
+			<div class="hov">
+				<p class="caption">sunset taken on my way from arizona to california.<br><b>taken on december 2025</b></p>
+			</div>
+		</div>
+
+		<div class="pic phone">
+			<img src="!g/251230-az-trip (1).jpg" alt="a little moth">
+			<img src="!g/251230-az-trip (4).jpg" alt="a little ladybug on my hand">
+			<div class="hov">
+				<p class="caption">insect friends.<br><b>taken throughout december 2025</b></p>
+			</div>
+		</div>
+
+		<div class="pic phone">
+			<img src="!g/251230-az-trip (3).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (19).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (20).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (6).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (7).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (10).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (11).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (12).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (13).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (5).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (8).jpg" alt="pics from my AZ trip 2026">
+			<img src="!g/251230-az-trip (9).jpg" alt="pics from my AZ trip 2026">
+			<div class="hov">
+				<p class="caption">from my trip to AZ and CA<br><b>taken throughout december 2025</b></p>
+			</div>
+		</div>
 
 		<div class="pic phone">
 			<img src="!g/251128-mushrooms (2).jpg" alt="mushroom">
@@ -203,7 +252,7 @@ coded with love by des
 			<img src="!g/240601-az%20(7).jpg">
 			<div class="hov">
 				<p class="caption">
-					went camping somewhere in AZ, very nice and chill. i love the little white flowers that was growing around the place. <br>found a bug buddy too! a friend told me it is a <i>"robberfly"</i>... first time i hear of them and see them.<br>my mom's dog <i>toby</i> cameo. he's ugly but also cute.<br><small>will post the scanned fujifilm pics at a later date!</small><br><b>taken on 01.jun.24</b>
+					went camping somewhere in AZ, very nice and chill. i love the little white flowers that was growing around the place. <br>found a bug buddy too! a friend told me it is a <i>"robberfly"</i>... first time i hear of them and see them.<br>my mom's dog <i>toby</i> cameo. he's ugly but also cute.<br><small><s>will post the scanned fujifilm pics at a later date!</s></small><br><b>taken on 01.jun.24</b>
 				</p>
 			</div>
 		</div>
@@ -546,7 +595,7 @@ coded with love by des
 	<div id="home"><a title="go back to homepage" href="/"><img src="/!g/pix/polaroid_5.gif"></a></div>
 
 	<footer>
-		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 28.nov.25</b>
+		please <u>don't</u> use my pics without my permission! <img src="/!g/pix/cam-shoot.gif"> <b>last updated: 10.jan.26</b>
 		<br>
 		<b>credit:</b> bg by <a href="http://sozaioukoku.fc2web.com/index.html" target="_blank">sozaioukoku</a> / header font by <a href="https://www.dafont.com/growing-garden-script.font" target="_blank">helotype</a> / border-img from <a href="https://fujoshi.nekoweb.org" target="_blank">mimi</a>!
 		<br>
