--- a/doqmeat/journal/archive.html
+++ b/doqmeat/journal/archive.html
@@ -71,6 +71,7 @@ coded with love by des
     </center>
     <h3>logs</h3>
     <ol reversed>
+      <li class="life interests"><a href="2026/01.html#10">looking back on 2025</a></li>
       <li class="life"><a href="2025/12.html#18">winter break stars!</a></li>
       <li class="life"><a href="2025/11.html#">connection</a></li>
       <li class="uni life"><a href="2025/09.html">my 4th uni semester</a></li>
