--- a/doqmeat/journal/index.html
+++ b/doqmeat/journal/index.html
@@ -45,7 +45,7 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 		</nav>
 
 		<main>
-			<iframe id="mainframe" src="2025/12.html?12" name="log" height="100%" width="100%"></iframe>
+			<iframe id="mainframe" src="2026/01.html" name="log" height="100%" width="100%"></iframe>
 		</main>
 	</div>
 
@@ -70,7 +70,7 @@ reverted back to v2.5 on 11.nov.24 cus i miss this silly layout
 	</aside>
 
 	<aside id="memo2" class="memo draggable">
-		<iframe name="calendar_frame" src="2025/calendar.html?11" id="calendar" scrolling="no"></iframe>
+		<iframe name="calendar_frame" src="2026/calendar.html" id="calendar" scrolling="no"></iframe>
 	</aside>
 
 	<aside id="memo4" class="memo draggable">
